@@ -188,7 +188,7 @@ $ rails_apps_composer new myapp -r core
 
 Would you like to skip Test::Unit? (yes for RSpec) (y/n)
 Would you like to skip Active Record? (yes for MongoDB) (y/n)
-What gem would you like to add? (blank to finish) 
+What gem would you like to add? (blank to finish)
 
 Generating basic application, using:
 "rails new myapp -m <temp_file>"
@@ -231,7 +231,7 @@ mvc: controllers, models, routes, views
 other: extras
 testing: testing
 
-Which recipe would you like to add? (blank to finish) 
+Which recipe would you like to add? (blank to finish)
 What gem would you like to add? (blank to finish)
 Generating and saving application template...
 Done.
@@ -343,7 +343,7 @@ If you get an error like this:
 Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem is installed.
     composer  Running 'after bundler' callbacks.
 The template [...] could not be loaded.
-Error: You have already activated ..., but your Gemfile requires .... 
+Error: You have already activated ..., but your Gemfile requires ....
 Using bundle exec may solve this.
 </pre>
 
