@@ -3,6 +3,7 @@ h1. CHANGELOG
 h2. 2.2.33 February 16, 2013
 
 * fix color for question prompt (https://github.com/RailsApps/rails_apps_composer/issues/161)
+* fix inconsistent use of EOF newline (https://github.com/RailsApps/rails_apps_composer/issues/160)
 
 h2. 2.2.32 February 14, 2013
 
